# webtronics_social_network

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
migrations/: env.py
migrations/versions/: 6e39b3963e72_add_post_and_like_dislike.py  827c10afcb0f_initial_migration.py
src/: app.py
src/auth/: db.py  manager.py  users.py
src/db/: base.py  config.py
src/db/dumps/: create_second_db.sh
src/models/: dislikes.py  likes.py  posts.py  users.py
src/repository/: base_repository.py  dislikes.py  likes.py  posts.py
src/schemas/: dislikes.py  likes.py  posts.py
src/services/: dislikes.py  likes.py  posts.py
tests/: conftest.py  test_posts.py  test_user.py
