[tool.poetry]
name = "webtronics-social-network"
version = "0.1.0"
description = ""
authors = ["Dimetry537 <maksakov1988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
asyncpg = "^0.27.0"
httpx = "^0.24.1"
sqlalchemy = "^2.0.17"
python-dotenv = "^1.0.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.0.0"}
alembic = "^1.11.1"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
